--- a/5thSem/PostmanApp/app/src/main/res/values/styles.xml
+++ b/5thSem/PostmanApp/app/src/main/res/values/styles.xml
@@ -7,14 +7,25 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
     <style name="AppTheme.PopupOverlay" parent="Theme.AppCompat.Light"/>
 
+    <style name="StandardButton">
+        <item name="android:background">@drawable/standard_button_rounded</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/standard_text_size</item>
+        <item name="android:foreground">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="Text">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="LinkText" parent="Text">
+        <item name="android:textColor">@color/blue</item>
+    </style>
 </resources>
